[gd_scene load_steps=5 format=3 uid="uid://c1ne8ehxjiqgb"]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_7v4qo"]
[ext_resource type="Texture2D" uid="uid://b8gmlbt12iott" path="res://Images/Italian_landscape_AI.jpg" id="2_cmql6"]
[ext_resource type="FontFile" uid="uid://dvjpeiguvrck1" path="res://BLACKCASTLEMF.TTF" id="2_qs6ao"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h2nj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7v4qo")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.11
offset_top = 30.0
offset_bottom = 101.8
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.219608, 0.168627, 0.101961, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_qs6ao")
theme_override_font_sizes/font_size = 64
text = "Condottieri 
Map Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenMapButton" type="Button" parent="."]
z_index = 25
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402
anchor_top = 0.772
anchor_right = 0.598
anchor_bottom = 0.842
offset_left = 0.440002
offset_top = 0.159973
offset_right = -0.440063
offset_bottom = -0.240051
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_qs6ao")
theme_override_font_sizes/font_size = 34
text = "Open Map"

[node name="NewMapButton" type="Button" parent="."]
z_index = 25
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402
anchor_top = 0.671
anchor_right = 0.598
anchor_bottom = 0.74
offset_left = 0.440002
offset_top = -0.119995
offset_right = -0.440063
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_qs6ao")
theme_override_font_sizes/font_size = 34
text = "New Map"

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6h2nj")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="Panel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -352.0
offset_right = 82.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_cmql6")
expand_mode = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="OpenMapButton" to="." method="_on_open_map_button_pressed"]
[connection signal="pressed" from="NewMapButton" to="." method="_on_new_map_button_pressed"]
